# rules_rust

./: .bazelrc  BUILD.bazel  WORKSPACE.bazel  bazel_versions.bzl
.bazelci/: presubmit.yml
rust/: BUILD.bazel  repositories.bzl
rust/platform/: BUILD.bazel
rust/platform/channel/: BUILD.bazel
rust/platform/cpu/: BUILD.bazel
rust/platform/os/: BUILD.bazel
rust/private/: BUILD.bazel  repository_utils.bzl
rust/private/dummy_cc_toolchain/: BUILD.bazel
rust/rust_analyzer/: BUILD.bazel
rust/settings/: BUILD.bazel
rust/toolchain/: BUILD.bazel
rust/toolchain/channel/: BUILD.bazel
test/: 0001-Add-support-for-WORKSPACE.bazel.patch  0001-Windows-support.patch  deps.bzl
test/integration/: BUILD.bazel  integration_test.bzl  integration_test.rs  issue1530.sh
test/integration/clippy/: BUILD.bazel  test.rs
test/integration/clippy/workspace/: BUILD.bazel
test/integration/crates/: BUILD.bazel  BUILD.similar-2.2.1.bazel  crates.bzl  defs.bzl
test/integration/issue1530/: BUILD.bazel  WORKSPACE.bazel  test.rs
test/integration/issue1530/workspace/: BUILD.bazel  WORKSPACE.bazel  panic.rs
test/unit/clippy/: BUILD.bazel  clippy_test.bzl
tools/clippy/: BUILD.bazel
util/: BUILD.bazel
util/dir_zipper/: BUILD.bazel
util/import/: BUILD.bazel
util/label/: BUILD.bazel
util/process_wrapper/: BUILD.bazel  main.rs  rustc.rs
util/process_wrapper/tinyjson/: LICENSE.txt  README.md  generator.rs  json_value.rs  mod.rs  parser.rs
