sh_binary(
    name = "fetch_shas",
    srcs = ["fetch_shas.sh"],
    tags = ["manual"],
)

filegroup(
    name = "collect_coverage",
    srcs = ["collect_coverage.sh"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
