load("//crate_universe:defs.bzl", "crate", "crates_vendor")
load("//rust:defs.bzl", "rust_library")

crates_vendor(
    name = "crates_vendor",
    cargo_lockfile = "Cargo.Bazel.lock",
    mode = "remote",
    packages = {
        "similar": crate.spec(
            version = "2.2.1",
        )
    },
    repository_name = "rules_rust_test_integration",
    tags = ["manual"],
)

rust_library(
    name = "integration",
    srcs = ["integration_test.rs"],
    edition = "2018",
    visibility = ["//test/integration:__subpackages__"],
)
